--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
 	<a href="#">Visit my LinkedIn</a>
 	<a href="#">Visit my FaceBook</a>
 	<a href="mailto:anish.vadher@aol.co.uk">Drop me an Email</a>
-	<div>
-		<img src="images/back.png" alt="Queen of Diamonds">
-		<img src="images/back.png" alt="Queen of Hearts">
-		<img src="images/back.png" alt="King of Diamonds">
-		<img src="images/back.png" alt="King of Hearts">
-	</div>
+	<div id="game-board" class="board clearfix"></div>
 	</main>
 	<footer class="clearfix">
 		<p class="copyright">Copyright 2017</p>
