reset button added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 	<a href="#">Visit my FaceBook</a>
 	<a href="mailto:anish.vadher@aol.co.uk">Drop me an Email</a>
 	<div id="game-board" class="board clearfix"></div>
+
+	<button id="resetgame">Reset Game</button>
 	</main>
 	<footer class="clearfix">
 		<p class="copyright">Copyright 2017</p>
